[package]
name = "jsonbase-lfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.30.0"
dotenv = "0.15.0"
futures = "0.3.19"
reqwest = "0.11.9"
serde = "1.0.136"
serde_json = "1.0.78"
tokio = { version =  "1.16.1", features = ["macros", "rt-multi-thread"] }
