[package]
name = "jsonbase-lfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
cached = "0.30.0"
dotenv = "0.15.0"
futures = "0.3.19"
reqwest = "0.11.9"
serde = { version="1.0.136", features = ["derive"]}
serde_json = "1.0.78"
tokio = { version =  "1.16.1", features = ["macros", "rt-multi-thread"] }
